--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,34 @@
-* {
-    box-sizing: border-box;
-
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  padding: 0;
 }
+:root {
+    --grid-cols: 1;
+    --grid-rows: 1;
+  }
+  
+  #container {
+    display: grid;
+    grid-gap: 1px;
+    grid-template-rows: repeat(var(--grid-rows), 30px);
+    grid-template-columns: repeat(var(--grid-cols), 30px);
+    padding: 2px;
+    border: 1px solid black; 
+  }
+  
+
+  
+  .grid-item {
+    padding: 10px;
+    border: 1px solid #ddd;
+    text-align: center;
+  }
 
 
-.container { 
-    display: grid; 
-    grid-template-columns: repeat(16, 25px [col-start]);
-}
+  .gridContainer {
+    display: flex; 
+    justify-content: center;
+    margin-top: 20px;
+  }
