--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,51 @@
-*,
-*::before,
-*::after {
+* {
   box-sizing: border-box;
-  padding: 0;
+  
+ }
+ 
+ :root {
+   --grid-cols: 1;
+   --grid-rows: 1;
+ }
+ 
+ #container {
+   display: grid;
+   grid-template-rows: repeat(var(--grid-rows), 1fr);
+   grid-template-columns: repeat(var(--grid-cols), 1fr);
+   justify-content: center;
+   width: 500px;
+   height: 500px;
+   background-color: white;
+   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+ 
+ }
+ 
+ .grid-item {
+   border: 1px solid #ddd;
+ }
+ 
+ body {
+   display: flex; 
+   align-items: center; 
+   flex-direction: column;
+   gap: 2%;
+   min-height: 100%;
+   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+   animation: gradient 15s ease infinite;
+   height: 100vh;
+ }
+ 
+ @keyframes gradient {
+   0% {
+     background-position: 0% 25%;
+   }
+ }
+
+ h1 {
+  display: flex;
+  justify-content: center; 
+  font-size: 45px;
+  color: #fcedd8;
+  font-family: 'Niconne', cursive;
+  font-weight: 700;
 }
-:root {
-    --grid-cols: 1;
-    --grid-rows: 1;
-  }
-  
-  #container {
-    display: grid;
-    grid-gap: 1px;
-    grid-template-rows: repeat(var(--grid-rows), 30px);
-    grid-template-columns: repeat(var(--grid-cols), 30px);
-    padding: 2px;
-    border: 1px solid black; 
-  }
-  
-
-  
-  .grid-item {
-    padding: 10px;
-    border: 1px solid #ddd;
-    text-align: center;
-  }
-
-
-  .gridContainer {
-    display: flex; 
-    justify-content: center;
-    margin-top: 20px;
-  }
